# alice-cli

./: .editorconfig  .gitignore  LICENSE  LICENSE.org  Package.swift  README.md  README.org  alice  alice-cli  justfile  pyproject.toml
Sources/: main.swift
alice/: palette.py  util.py
doc/: alice.1.scd
palette/: hex.py  rgb.py  util.py
src/alice_colorscheme/: __main__.py  cli.py  palette.py  util.py
tests/: basic.sh  visual.sh
